--- a/warp/templates/base.html
+++ b/warp/templates/base.html
@@ -5,7 +5,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-    <link rel="icon" href="{{ url_for('static', filename='images/favicon.png') }}" type="image/png" />
+    <link rel="icon" href="{{ url_for('static', filename='images/logo_desk24.png') }}" type="image/png" />
 
     <style>
         @font-face {
