--- a/warp/templates/index.html
+++ b/warp/templates/index.html
@@ -10,8 +10,7 @@
 
     <div class="index_container">
         <div>
-        <img src="{{ url_for('static', filename='images/logo-color.png') }}"><br>
-        Workspace Autonomous Reservation Program
+        <img src="{{ url_for('static', filename='images/logo_desk24_schwarz.png') }}">
         </div>
     </div>
 
