--- a/warp/templates/login.html
+++ b/warp/templates/login.html
@@ -26,7 +26,7 @@
 
     <nav>
         <div class="nav-wrapper">
-            <div class="center"><img class="logo" src="{{ url_for('static', filename='images/logo.png') }}"></div>
+            <div class="center"><img class="logo" src="{{ url_for('static', filename='images/logo_desk24.png') }}"></div>
         </div>
     </nav>
 
