Add the logo to the tab

--- a/warp/templates/base.html
+++ b/warp/templates/base.html
@@ -1,11 +1,9 @@
 <!doctype html>
 <html>
 <head>
-    <title>WARP</title>
-
+    <title>Desk24</title>
+    <link rel="icon" href="{{ url_for('static', filename='images/logo_desk24_35-12pixel.png') }}" type="image/png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-
-    <link rel="icon" href="{{ url_for('static', filename='images/logo_desk24.png') }}" type="image/png" />
 
     <style>
         @font-face {
