--- a/warp/templates/base_logged.html
+++ b/warp/templates/base_logged.html
@@ -51,6 +51,7 @@
 
         <div class="nav-wrapper">
             <div class='right'>
+                                                                            <!-- Logo oben rechts -->
                 <a href="{{ url_for('view.index')}}" class="right"><img class="logo" src="{{ url_for('static', filename='images/logo_desk24.png') }}"></a>
             </div>
             {% if g.isAdmin %}
