--- a/warp/templates/index.html
+++ b/warp/templates/index.html
@@ -92,39 +92,39 @@
 	height: 10px;
 }
 </style>
-    <div class="index_container">
-        <div class="cell">
-        	<div class="box">
-        		<h3 class="titel">Meine Buchungen</h3>
-        	</div>
-        	<div class="box2">
-        		<h3 class="subtitel">Für heute gebucht:</h3>
-        		<div style="margin: 0px 0px">
-        			<h1 class="intext1">EG/12/AP02</h1>
-        			<h5 class="hour">10:00 - 17:00 Uhr</h5>
-        		</div>
-        	</div>	
-        </div>
-        <div class="cell">
-        	<div class="box">
-        		<h3 class="titel">Ergeschoss</h3>
-        	</div>
-        	<div class="box2">
-        		<h3 class="subtitel">Heute sind noch</h3>
-        		<h1 class="intext2">17</h1>
-        		<h5>Plätze frei</h5>
-        	</div>	
-        </div>
-        <div class="cell">
-        	<div class="box">
-        		<h3 class="titel">Obergeschoss</h3>
-        	</div>
-        	<div class="box2">
-        		<h3 class="subtitel">Heute sind noch</h3>
-        		<h1 class="intext2">17</h1>
-        		<h5>Plätze frei</h5>
-        	</div>	
-        </div>
-    </div>
+<div class="index_container">
+	<div class="cell">
+		<div class="box">
+			<h3 class="titel">Meine Buchungen</h3>
+		</div>
+		<div class="box2">
+			<h3 class="subtitel">Für heute gebucht:</h3>
+			<div style="margin: 0px 0px">
+				<h1 class="intext1">{{ current_booking.seat }}</h1>
+				<h5 class="hour">{{ current_booking.time }}</h5>
+			</div>
+		</div>    
+	</div>
+	<div class="cell">
+		<div class="box">
+			<h3 class="titel">Ergeschoss</h3>
+		</div>
+		<div class="box2">
+			<h3 class="subtitel">Heute sind noch</h3>
+			<h1 class="intext2">{{ available_seats.EG }}</h1>
+			<h5>Plätze frei</h5>
+		</div>    
+	</div>
+	<div class="cell">
+		<div class="box">
+			<h3 class="titel">Obergeschoss</h3>
+		</div>
+		<div class="box2">
+			<h3 class="subtitel">Heute sind noch</h3>
+			<h1 class="intext2">{{ available_seats.OG }}</h1>
+			<h5>Plätze frei</h5>
+		</div>    
+	</div>
+</div>
 
 {% endblock %}
