--- a/warp/templates/index.html
+++ b/warp/templates/index.html
@@ -98,7 +98,7 @@
 			<h3 class="titel">Meine Buchungen</h3>
 		</div>
 		<div class="box2">
-			<h3 class="subtitel">Für heute gebucht:</h3>
+			<h3 class="subtitel">Nächste Buchung:</h3>
 			<div style="margin: 0px 0px">
 				<h1 class="intext1">{{ current_booking.seat }}</h1>
 				<h5 class="hour">{{ current_booking.time }}</h5>
