--- a/desk24/templates/base_logged.html
+++ b/desk24/templates/base_logged.html
@@ -78,14 +78,14 @@
 
 <!-- Ihr Formular -->
 <form id="supportForm" class="support-form-element"
-    action="https://formspree.io/f/mnqyygnp"
+    action="https://formspree.io/f/mzbqnney"
     method="POST"
 >
     <button id="closeBtn" type="button">X</button>
     <div class="form-title">Schaden melden</div>
     <label>
         Tischnummer:
-        <input type="number" name="tableNumber" placeholder="Tischnummer eingeben" required>
+        <input type="number" step="0.01" name="tableNumber" placeholder="Tischnummer eingeben" required>
     </label>
     <label>
         Beschreiben Sie den Schaden:
